apps/samba/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: samba
  namespace: network-services
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: samba
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
        - ipBlock:
            cidr: 10.8.0.0/24
      ports:
        - port: 137
          protocol: UDP
        - port: 138
          protocol: UDP
        - port: 139
          protocol: TCP
        - port: 445
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24
